--- a/src/Components/Forms/Login/Login.module.css
+++ b/src/Components/Forms/Login/Login.module.css
@@ -28,6 +28,15 @@
     text-transform: uppercase;
     font-weight: 500;
   }
+  .box h2, .box a{
+    color: white;
+    text-transform: uppercase;
+    font-weight: 300;
+    font-size: 30px;
+  }
+  .box a {
+    color: #2ecc71;
+  }
   .box input[type = "text"],.box input[type = "password"]{
     border:0;
     background: none;
