--- a/src/Components/Profile/profile.module.css
+++ b/src/Components/Profile/profile.module.css
@@ -35,6 +35,7 @@
   display: flex;
   flex-wrap: wrap;
   margin: 0 50px;
+  border-bottom: 1px gray solid;
 }
 
 .smallcard {
@@ -73,7 +74,8 @@
 }
 
 .smallcard, .games-header {
-  margin: 6px 56px;
+
+  margin: 10px 25px 25px 10px;
 }
 
 .smallcard-image img {
