Added "News" Tab and dummy articles while loading the real articles

--- a/src/Components/Header/NavbarLeft/NavBarLeft.module.css
+++ b/src/Components/Header/NavbarLeft/NavBarLeft.module.css
@@ -30,6 +30,7 @@
     font-family: OpenSans, sans-serif, arial;
     letter-spacing: 1.1px;
     text-transform: uppercase;
+    padding: 25px 0;
   }
   
   .header-right-list {
