--- a/src/Components/News/News.module.css
+++ b/src/Components/News/News.module.css
@@ -70,7 +70,7 @@
     height: 110px;
     background-color: black;
 }
-.image-container img {
+.image-container img, .top-img img {
     width: 100%;
     height: 100%;
     border-radius: 5px;
