--- a/src/Components/Forms/Register/Register.module.css
+++ b/src/Components/Forms/Register/Register.module.css
@@ -1,65 +1,99 @@
-.modal {
-  margin-top: 70px;
-  display: block; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
-
-
-.box{
-  width: 400px;
-  padding: 40px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  background: #191919;
-  text-align: center;
-}
-.box h1{
-  color: white;
-  text-transform: uppercase;
-  font-weight: 500;
-}
-.box input[type = "text"],.box input[type = "password"]{
-  border:0;
-  background: none;
-  display: block;
-  margin: 20px auto;
-  text-align: center;
-  border: 2px solid #3498db;
-  padding: 14px 10px;
-  width: 200px;
-  outline: none;
-  color: white;
-  border-radius: 24px;
-  transition: 0.25s;
-}
-.box input[type = "text"]:focus,.box input[type = "password"]:focus{
-  width: 280px;
-  border-color: #2ecc71;
-}
-.box input[type = "submit"]{
-  border:0;
-  background: none;
-  display: block;
-  margin: 20px auto;
-  text-align: center;
-  border: 2px solid #2ecc71;
-  padding: 14px 40px;
-  outline: none;
-  color: white;
-  border-radius: 24px;
-  transition: 0.25s;
-  cursor: pointer;
-}
-.box input[type = "submit"]:hover{
-  background: #2ecc71;
-}
+.form-background {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+  }
+  .form-background form {
+      display: flex;
+  /*     flex-wrap: wrap; */
+      flex-direction: column;
+  }
+  
+  .icon-and-label {
+      display: flex;
+     /*  flex-wrap: wrap; */
+      flex-direction: column;
+  }
+  
+  .iconify {
+      font-size: 40px;
+      color: white;
+      margin: 0 auto 29px auto;
+  
+  }
+  
+  .form-container {
+      background: rgb(32, 32, 32);
+      display: flex;
+      padding: 30px;
+      flex-direction: column;
+      /* justify-content: center; */
+      max-width: 420px;
+      max-height: 420px;
+  }
+  
+  
+  .form-container form input[type="text"], .form-container form input[type="password"] {
+      border-radius: 6px;
+      color: white;
+      padding: 28px 5px;
+      width: 100%;
+    font-size: 17px;
+      background: none;
+      border: none;
+      height: 5px;
+      outline: 0;
+  }
+  
+  .form-container>.icon-and-label>label {
+      margin: 0px 0px 10px 1px;
+      color: white;
+      font-size: 14px;
+      text-transform: uppercase;
+  }
+  
+  .input-container {
+      height: 50px;
+      border-radius: 6px;
+      border: 1px solid grey;
+      display: flex;
+      flex-wrap: wrap;
+      padding: 5px 5px;
+      width: 350px;
+      margin: 7px 0;
+      background: rgb(32, 32, 32);
+  }
+  
+  .input-container label {
+    transform: translate(8px, -60px) scale(1);
+      font-size: 15px;
+      color: rgb(201, 201, 201);
+      pointer-events: none;
+      transition: 0.25s;
+      margin: 0px 1px;
+  }
+  
+  .inputChild:focus+.inputLabel {
+    transform: translate(-8px, -62px) scale(0.800);
+  }
+  
+  form>button {
+      padding: 18px;
+      margin: 15px 0 5px 0;
+      border-radius: 8px;
+      background: rgb(40, 138, 232);
+  
+      border: 0;
+      color: white;
+      font-size: 16px;
+  }
+  .text-container p {
+      color: white;
+      font-size: 14px;
+  }
+  .text-container a {
+      color: white;
+      text-decoration: underline;
+  }
