--- a/src/Components/Forms/UploadGame/UploadGame.module.css
+++ b/src/Components/Forms/UploadGame/UploadGame.module.css
@@ -1,26 +1,19 @@
-.modal {
-    margin-top: 70px;
-    display: block; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  }
+.form-container {
+  display: flex;
+justify-content: center;
+align-items: center;
+width: 100vw;
+position: relative;
+margin: 20px 0;
+}
   
   
   .box{
     width: 400px;
     padding: 40px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
     background: #191919;
+    display: flex;
+    flex-direction: column;
     text-align: center;
   }
   .box h1{
