--- a/src/Components/Details/MainDisplay/MainDisplay.module.css
+++ b/src/Components/Details/MainDisplay/MainDisplay.module.css
@@ -17,8 +17,8 @@
 .details-description {
     margin-top: 18px;
     margin-bottom: 55px;
-    color: rgb(245, 245, 245);
-    font-size: 28px;
+    color: rgb(195,195,195);
+    font-size: 18px;
    
 }
 
