--- a/src/Components/ShoppingCart/ShoppingCart.module.css
+++ b/src/Components/ShoppingCart/ShoppingCart.module.css
@@ -87,6 +87,7 @@
     border-bottom: 1px solid  rgba(245,245,245, 0.6);
     margin-left: 18px;
     color: rgba(245,245,245, 0.6);
+    cursor: pointer;
 }
 .purchase-info {
     display: flex;
