--- a/src/Components/AdminPanel/AdminPanel.module.css
+++ b/src/Components/AdminPanel/AdminPanel.module.css
@@ -56,7 +56,7 @@
 
 .profile {
     width: 100%;
-    height: 50%;
+    height: 30%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -93,13 +93,14 @@
 
 .article-row {
     display: flex;
+    justify-content: center;
     background-color: white;
     border-left: 1px solid gray;
     text-align: center;
 }
 
 .article-row input {
-    padding: 15px 5px;
+    padding: 15px 58px 15px 5px;
     height: 13px;
     width: 396px;
     flex-basis: 25%;
@@ -143,4 +144,15 @@ position: absolute;
 right: 5px;
 bottom: 5px;
 font-size: 20px;
+}
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
